--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  convex_bottom_bar: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.25.4
+  animate_do: ^3.3.3
+  get: ^4.1.4
+  get_storage: ^2.0.2
+  carousel_slider: ^4.0.0
+  cached_network_image: ^3.0.0
+  shimmer: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +68,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
+ 
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
