--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,10 @@ dependencies:
   carousel_slider: ^4.0.0
   cached_network_image: ^3.0.0
   shimmer: ^2.0.0
-  
-  cupertino_icons: ^1.0.2
   datetime_picker_formfield: ^2.0.1
   intl: ^0.19.0
   firebase_auth: ^4.17.4
+  http: ^1.2.0
 
 
 dev_dependencies:
