--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
     sdk: flutter
   convex_bottom_bar: ^3.0.0
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -42,19 +41,23 @@ dependencies:
   get_storage: ^2.0.2
   carousel_slider: ^4.0.0
   cached_network_image: ^3.0.0
-  shimmer: ^2.0.0
+  shimmer: ^3.0.0
+  video_player: ^2.8.2
+  http: ^1.2.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -70,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - videos/
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
